# raven

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
adapters/railgun/: Cargo.toml  Dockerfile  Dockerfile.mock-ppoi
adapters/railgun/.config/: nextest.toml
adapters/railgun/cli/: Cargo.toml
adapters/railgun/cli/src/: auto_spawn.rs  auto_spawn_driver.rs  bootstrap_chainalysis.rs  bootstrap_subsquid.rs  lib.rs  main.rs  migrate_encoder.rs  rpc_pool_array_config.rs  serve_production.rs  serve_production_multi.rs  snapshot_port.rs  toy_server.rs
adapters/railgun/cli/tests/: auto_spawn_log.rs  auto_spawn_races.rs  auto_spawn_shutdown.rs  batch_dispatcher_byte_identity.rs  bootstrap_from_subsquid.rs  http_error_paths.rs  manifest_concurrent_migrate_bootstrap_race.rs  migrate_encoder_concurrent_lock.rs  migrate_encoder_kill_during.rs  migrate_encoder_real_sigkill.rs  migrate_encoder_v6_round_trip.rs  multi_list_ppoi_dynamic.rs  production_cell.rs  serve_production_config_file.rs  serve_production_defaults.rs  six_instance_integration.rs  smart_policy_deferred.rs  smart_policy_lifecycle.rs  snapshot_export_prune.rs  snapshot_port_round_trip.rs  start_block_fallback.rs  walking_skeleton.rs  ws_subscribe_wiring.rs
adapters/railgun/client-wasm/: Cargo.toml
adapters/railgun/client-wasm/examples/: emit_test_fixture.rs
adapters/railgun/client-wasm/scripts/: wasm-build.sh
adapters/railgun/client-wasm/src/: lib.rs
adapters/railgun/client-wasm/tests/: bincode_size_caps.rs  panic_safety.rs  parity_native_vs_wasm.rs  session_serde_round_trip.rs  wasm_client_bench.rs  wasm_panic_to_jsvalue.rs
adapters/railgun/core/: Cargo.toml
adapters/railgun/core/src/: lib.rs
adapters/railgun/engine/: Cargo.toml
adapters/railgun/engine/src/: imt.rs  inspire.rs  layer_two.rs  lib.rs  offline_packing_keys_cache.rs  orchestrator.rs  persistence.rs  tree_fill_watcher.rs
adapters/railgun/engine/tests/: arcswap_concurrency_stress.rs  auto_spawn_lifecycle.rs  bridges.rs  cache_carry_bench.rs  dirty_shard_count_bench.rs  drain_state_routing.rs  encoder_label_audit.rs  encoder_recovery.rs  end_to_end_spend_bench.rs  engine_dedup_extends_to_encoder.rs  g5_d_subsquid_root_oracle.rs  heartbeat_eviction.rs  insert_cost_bench.rs  k4_dispatcher_bench.rs  k_widening_bench.rs  logical_store_invariants.rs  migration_per_node.rs  multi_instance_bottleneck_probe.rs  multi_instance_recovery.rs  multi_instance_reorg_cascade.rs  multi_instance_router_arcswap_stress.rs  multi_instance_throughput_bench.rs  offline_packing_keys_cache.rs  orchestrator_e2e.rs  per_encoder_fill_level_sweep_bench.rs  per_insert_wall_time_bench.rs  per_leaf_encoder_byte_identity.rs  per_leaf_path_production_cell.rs  per_list_imt_reorg_coherency.rs  per_list_node_encoder_byte_identity.rs  per_node_production_cell.rs  phase4_closure.rs  poisoned_wal_replay_counter.rs  recovery_latency_bench.rs  snapshot_codec_acceleration_bench.rs  swap_state_session_lifecycle.rs  t1_status_closure.rs  t2_path_closure.rs  t3_commit_tree_path_closure.rs  tree_fill_watcher.rs  (+4 more)
adapters/railgun/examples/: grafana-raven-railgun.json  mainnet-6-instance.toml  rpc-pool.example.toml
adapters/railgun/http/: Cargo.toml
adapters/railgun/http/src/: admin.rs  auth.rs  batch.rs  config.rs  events.rs  lib.rs  poi_shim.rs  state.rs  status.rs  versioned.rs
adapters/railgun/http/tests/: batch_timeout_race.rs  bearer_token_rotation.rs  instance_params_inspire_params.rs  max_body_bytes_413.rs  metrics_surface.rs  params_caching.rs  poi_shim_routes.rs  (+2 more)
adapters/railgun/indexer/: Cargo.toml
adapters/railgun/mock-ppoi/: Cargo.toml  README.md
adapters/railgun/persistence/: Cargo.toml
adapters/railgun/poseidon/: Cargo.toml
adapters/railgun/ppoi-mirror/: Cargo.toml
adapters/railgun/scripts/: capture-real-oracle-roots.sh  check-hygiene.sh  check-wasm-bundle-size.sh
adapters/railgun/sdk/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
benches/b1-bench/: Cargo.toml  README.md
benches/b1-bench/.cargo/: config.toml
benches/b1-bench/src/: adaptive_params.rs  lib.rs
benches/b2-bench/: Cargo.toml
benches/b2-bench/src/: lib.rs
benches/raven-bench/: Cargo.toml
benches/raven-bench/src/: frame.rs  harness.rs  lib.rs  noise.rs  pir_eng_notes.rs  timing.rs
crates/binary-fuse-filter/: Cargo.toml  README.md  UPSTREAM.md
crates/binary-fuse-filter/src/: branch_opt.rs  error.rs  filter.rs  lib.rs
crates/binary-fuse-filter/tests/: construct.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/tests/: bincode_size_caps.rs  panic_safety.rs  parity_native_vs_wasm.rs  session_serde_round_trip.rs  wasm_client_bench.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  instance.rs  lib.rs  memory.rs  server_error.rs  storage.rs
crates/core/tests/: storage_invariants.rs
crates/crypto-primitives/: Cargo.toml
crates/crypto-primitives/src/: bitpack.rs  lib.rs  rng.rs  seed.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/isimplepir/: Cargo.toml  UPSTREAM.md
crates/isimplepir/src/: error.rs  extract.rs  hint.rs  lib.rs  params.rs  query.rs  respond.rs  setup.rs  squish.rs  state.rs  update.rs  version.rs
crates/isimplepir/tests/: deterministic_a.rs  kat_fixtures.rs  smoke_e2e.rs  squish_equivalence.rs  update_invariant.rs  version_k.rs
crates/raven-indexer/: Cargo.toml
crates/raven-indexer/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  manifest.rs  snapshot.rs  wal.rs
crates/storage/tests/: roundtrip_proptest.rs
examples/eth-state/: Cargo.toml
examples/eth-state/src/: anvil.rs  fold.rs  harness.rs  ingest.rs  lib.rs
examples/eth-state/tests/: cached_respond_kat.rs  consume_both.rs  fold_reset_deterministic.rs  group_b.rs  ingest_flat_balance.rs  prop_record.rs  resilience.rs  sidecar_wiring.rs  stress_c1_c2_c5.rs
tools/bench-compare/: Cargo.toml
tools/bench-compare/src/: lib.rs  main.rs
tools/bench-compare/tests/: integration.rs
(+89 files in other folders)
