[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto-primitives",
    "crates/indexer",
    "crates/client",
    "benches/raven-bench",
]
exclude = [
    "crates/inspire",
    "adapters/railgun",
    "adapters/railgun/client-wasm",
    "benches/b1-bench",
    "benches/b2-bench",
    "tools/bench-compare",
]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.85"
authors = ["The Raven Authors"]
license = "Apache-2.0"
repository = "https://github.com/REPLACE-WITH-PUBLIC-ORG/raven"
homepage = "https://github.com/REPLACE-WITH-PUBLIC-ORG/raven"
readme = "README.md"

[workspace.dependencies]
thiserror = "2"
bytes = "1"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

indexing_slicing = "warn"
arithmetic_side_effects = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"

pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
