# Standalone workspace. Excluded from the raven root workspace because it
# pulls heavy transitive deps (axum + tokio + reqwest, once more crates land)
# that would feature-unify into the wasm32 build of the core crates.
#
# Build everything:
#   cargo build --manifest-path adapters/railgun/Cargo.toml --release
#
# Run tests:
#   cargo test --manifest-path adapters/railgun/Cargo.toml
[workspace]
resolver = "2"
members = [
    "core",
    "indexer",
    "persistence",
    "poseidon",
    "ppoi-mirror",
]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.85"
authors = ["Raven contributors"]
license = "Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "warn"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"

[workspace.dependencies]
# Internal adapter crates
raven-railgun-core = { path = "core", version = "0.1.0-alpha.0" }
raven-railgun-indexer = { path = "indexer", version = "0.1.0-alpha.0" }
raven-railgun-persistence = { path = "persistence", version = "0.1.0-alpha.0" }
raven-railgun-poseidon = { path = "poseidon", version = "0.1.0-alpha.0" }
raven-railgun-ppoi-mirror = { path = "ppoi-mirror", version = "0.1.0-alpha.0" }

# Common deps
thiserror = "2"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
bincode = "1.3"
crc32fast = "1"
sha2 = { version = "0.10", default-features = false }
parking_lot = "0.12"
tracing = "0.1"
fs4 = "1"

# Async runtime + chain source
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "signal", "time"] }
async-trait = "0.1"
alloy = { version = "1.2", features = ["std", "provider-http", "provider-ws", "pubsub", "rpc-types-eth", "sol-types"] }
governor = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"

# Poseidon-BN254 for Railgun parity (Shield commitment_hash, blindedCommitment,
# Merkle path construction). light-poseidon is byte-compatible with
# circomlibjs (Railgun TS reference).
light-poseidon = "0.4"
ark-bn254 = "0.5"
ark-ff = "0.5"
tiny-keccak = { version = "2", features = ["keccak"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
