# Standalone. Held outside the root workspace so raven-isimplepir's
# optional deps don't feature-unify into the mainline crates.
[workspace]

[package]
name = "raven-b2-bench"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.85"
authors = ["Hisoka.io"]
license = "Apache-2.0"
description = "Baseline bench harness driving raven-isimplepir against the PSE 3x3 grid."
publish = false

# Adapter code prints to stdout/stderr + uses a few unwraps where the
# upstream crate's error would be terminal anyway. Relax the strict
# lints the scheme crates enforce.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
print_stdout = "allow"
print_stderr = "allow"
pedantic = "allow"

[dependencies]
raven-bench = { path = "../raven-bench", version = "0.1.0-alpha.0" }
raven-isimplepir = { path = "../../crates/isimplepir", version = "0.1.0-alpha.0", default-features = false, features = ["server"] }
rand_chacha = "0.9"
rand_core = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
# Log rayon thread count at startup. The isimplepir crate's respond
# path is rayon-parallel under its `server` feature.
rayon = "1"

[[bin]]
name = "b2-isimplepir"
path = "src/bin/b2_isimplepir.rs"
