[package]
name = "raven-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "PSE 3x3 grid benchmark harness for Raven PIR schemes."

[lints]
workspace = true

[dependencies]
raven-core = { path = "../../crates/core" }
bytes = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = { workspace = true }
