[package]
name = "raven-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Wasm-friendly client surface for Raven."
publish = false

[lints]
workspace = true

[dependencies]
