[package]
name = "raven-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Synchronous facade over a Raven StorageBackend."
publish = false

[lints]
workspace = true

[dependencies]
raven-core = { path = "../core", version = "0.1.0-alpha.0" }
