[package]
name = "raven-railgun-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Operator CLI for the Raven Railgun PIR adapter."

[lints]
workspace = true

[[bin]]
name = "raven-railgun"
path = "src/main.rs"

[dependencies]
raven-railgun-core = { workspace = true }
raven-railgun-engine = { workspace = true }
raven-railgun-http = { workspace = true }
raven-railgun-indexer = { workspace = true }
raven-railgun-poseidon = { workspace = true }
raven-railgun-ppoi-mirror = { workspace = true }
raven-railgun-persistence = { workspace = true }
raven-inspire = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
tar = "0.4"
zstd = "0.13"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast", "zeroize"] }
hex = "0.4"
thiserror = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tempfile = "3"
raven-railgun-engine = { workspace = true }
raven-railgun-indexer = { workspace = true }
raven-railgun-persistence = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
