[workspace]

[package]
name = "raven-inspire-client-wasm"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.85"
authors = ["Raven contributors"]
license = "Apache-2.0"
publish = false
description = "Browser/Node WASM client surface for raven-inspire's PIR query/extract path. Lets the TS SDK do PIR client-side so plaintext blindedCommitments never cross the wire."

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"

[dependencies]
raven-inspire = { path = "../../../crates/inspire" }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "z"
panic = "unwind"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
