[package]
name = "raven-railgun-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared types for the Raven Railgun PIR adapter."

[lints]
workspace = true

[dependencies]
raven-core = { path = "../../../crates/core" }
serde = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
serde_json = "1"
