[package]
name = "raven-railgun-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Chain-event indexer for the Raven Railgun PIR adapter."

[lints]
workspace = true

[dependencies]
raven-railgun-core = { workspace = true }
raven-railgun-poseidon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
alloy = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
raven-railgun-poseidon = { workspace = true }
axum = { workspace = true }
